sửa logic chức năng đặt ghế, đánh giá